# kurumi-eyes

./: .gitignore  LICENSE.md  README.md  build.sh  configgen.py  mass_delete.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_invites.py
api/: serializers.py  urls.py  views.py
core/: settings.py  urls.py
static/css/: style.css  upload.css
static/js/: script.js
templates/pages/: alluploads.html  dashboard.html  home.html  login.html  myuploads.html  profile.html  register.html  settings.html  upload.html  uploadinfo.html
templates/partials/: base.html  footer.html  homebtn.html  sidenav.html
uploads/: admin.py  forms.py  models.py  urls.py  views.py
uploads/migrations/: 0001_initial.py  0002_alter_imageupload_user.py  0003_alter_imageupload_user.py  0004_imageupload_image_size.py
