[tool.poetry]
name = "kurumi-eyes"
version = "0.1.0"
description = "image hosting service"
authors = ["clmb <ccolombomatheus@gmail.com>"]
readme = "README.md"
packages = [{include = "kurumi_eyes"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
Django = "4.1.2"
asgiref = "3.5.2"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
dj-database-url = "1.0.0"
django-cors-headers = "3.13.0"
djangorestframework = "3.14.0"
idna = "3.4"
Pillow = "9.2.0"
psycopg2-binary = "2.9.5"
pytz = "2022.6"
requests = "2.28.1"
sqlparse = "0.4.3"
tzdata = "2022.5"
urllib3 = "1.26.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
